--- a/modules/general/views/general/scripts/master.phtml
+++ b/modules/general/views/general/scripts/master.phtml
@@ -1,16 +1,27 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-  <head
+  <head>
     <base href="<?php echo $this->baseUrl()?>" />
-    <?php $this->headTitle('Kuukse elfkroegetocht') ?>
+    <?php $this->headTitle('Aviko Tournament Scheduler') ?>
     <?php echo $this->headMeta() ?>
     <?php echo $this->headTitle()?>
     <?php echo $this->headStyle()?>
     <?php echo $this->headLink()?>
   </head>
   <body>
-    Content:<br />
+    <a href="<?php echo $this->url(array(), 'general.frontpage.index') ?>">Home</a>
+    
+    <?php if ($this->authorizer()->getUser()->getRole() !== 'guest'): ?>
+      | <a href="<?php echo $this->url(array('module' => 'user', 'controller' => 'user', 'action' => 'logout')) ?>">Uitloggen</a>
+      | <a href="<?php echo $this->url(array('module' => 'user', 'controller' => 'user', 'action' => 'index')) ?>">Gebruikers</a>
+      | <a href="<?php echo $this->url(array('module' => 'scheduler', 'controller' => 'tournament', 'action' => 'index')) ?>">Toernooien</a>
+      | <a href="<?php echo $this->url(array('module' => 'scheduler', 'controller' => 'field', 'action' => 'index')) ?>">Velden</a>
+    <?php else: ?>
+      | <a href="<?php echo $this->url(array('module' => 'user', 'controller' => 'user', 'action' => 'login')) ?>">Login</a>
+    <?php endif ?>
+    
+    <br /><br />
     <?php echo $this->content ?>
     <?php echo $this->headScript()?>
   </body>
