--- a/modules/general/views/general/scripts/master.phtml
+++ b/modules/general/views/general/scripts/master.phtml
@@ -10,6 +10,7 @@
     <?php echo $this->headLink()?>
   </head>
   <body>
+    <div id="main-menu" style="margin-bottom: 30px">
     <a href="<?php echo $this->url(array(), 'general.frontpage.index') ?>">Home</a>
     
     <?php if ($this->authorizer()->getUser()->getRole() !== 'guest'): ?>
@@ -20,8 +21,8 @@
     <?php else: ?>
       | <a href="<?php echo $this->url(array('module' => 'user', 'controller' => 'user', 'action' => 'login')) ?>">Login</a>
     <?php endif ?>
-    
-    <br /><br />
+    </div>
+
     <?php echo $this->content ?>
     <?php echo $this->headScript()?>
   </body>
