--- a/modules/scheduler/views/ats2015/scripts/group/read.phtml
+++ b/modules/scheduler/views/ats2015/scripts/group/read.phtml
@@ -31,26 +31,4 @@
 
 <br />
 <b>Wedstrijden</b>:
-<table>
-  <tr>
-    <th>Tijd</th>
-    <th>Veld</th>
-    <th>Thuis</th>
-    <th></th>
-    <th>Uit</th>
-    <th colspan="3">Uitslag</th>
-  </tr>
-  <?php foreach ($this->matches as $match): ?>
-  <tr>
-    <td style="text-align: right"><?php echo $this->locale()->getFormatter()->formatTime($match->starts_at, 'short', "Y-m-d H:i:s") ?></td>
-    <td style="padding: 0 10px 0 10px"><?php echo $this->escape($match->field->name) ?></td>
-    <td style="padding: 0 10px 0 10px"><a href="<?php echo $this->url(array('controller' => 'team', 'action' => 'read', 'id' => $match->home_team_id)) ?>"><?php echo $this->escape($match->home_team->name) ?></a></td>
-    <td>-</td>
-    <td style="padding: 0 10px 0 10px"><a href="<?php echo $this->url(array('controller' => 'team', 'action' => 'read', 'id' => $match->away_team_id)) ?>"><?php echo $this->escape($match->away_team->name) ?></a></td>
-    
-    <td><?php echo $match->goals_home ?></td>
-    <td>-</td>
-    <td><?php echo $match->goals_away ?></td>
-  </tr>
-  <?php endforeach ?>
-</table>
+<?php echo $this->partial('match/_table.phtml', array('matches' => $this->matches, 'hideTournaments' => true, 'hideGroups' => true, 'groupByStartsAt' => false)) ?>
