--- a/modules/scheduler/views/ats2015/scripts/tournament/read.phtml
+++ b/modules/scheduler/views/ats2015/scripts/tournament/read.phtml
@@ -32,32 +32,7 @@
 
 <br />
 <b>Wedstrijden</b>:
-<table>
-  <tr>
-    <th>Tijd</th>
-    <th>Veld</th>
-    <th>Poule</th>
-    <th>Thuis</th>
-    <th></th>
-    <th>Uit</th>
-    <th colspan="3">Uitslag</th>
-    <th></th>
-  </tr>
-  <?php foreach ($this->matches as $match): ?>
-  <tr>
-    <td style="text-align: right"><?php echo $this->locale()->getFormatter()->formatTime($match->starts_at, 'short', "Y-m-d H:i:s") ?></td>
-    <td style="padding: 0 10px 0 10px"><?php echo $this->escape($match->field->name) ?></td>
-    <td style="padding: 0 10px 0 10px"><a href="<?php echo $this->url(array('controller' => 'group', 'action' => 'read', 'id' => $match->group->id)) ?>"><?php echo $this->escape($match->group->name) ?></a></td>
-    <td style="padding: 0 10px 0 10px"><a href="<?php echo $this->url(array('controller' => 'team', 'action' => 'read', 'id' => $match->home_team_id)) ?>"><?php echo $this->escape($match->home_team->name) ?></a></td>
-    <td>-</td>
-    <td style="padding: 0 10px 0 10px"><a href="<?php echo $this->url(array('controller' => 'team', 'action' => 'read', 'id' => $match->away_team_id)) ?>"><?php echo $this->escape($match->away_team->name) ?></a></td>
-    <td><?php echo $match->goals_home ?></td>
-    <td>-</td>
-    <td><?php echo $match->goals_away ?></td>
-    <td><a href="<?php echo $this->url(array('controller' => 'match', 'action' => 'update', 'id' => $match->id)) ?>"><img src="ats2015/general/images/icons/16x16/edit.png" /></a></td>
-  </tr>
-  <?php endforeach ?>
-</table>
+<?php echo $this->partial('match/_table.phtml', array('matches' => $this->matches, 'hideTournaments' => true, 'showEdits' => true )) ?>
   
 <form method="get" action="<?php echo $this->url(array('controller' => 'tournament', 'action' => 'generateschedule')) ?>">
   <input type="hidden" name="id" value="<?php echo $this->tournament->id?>" />
