--- a/modules/scheduler/views/ats2015/scripts/match/dashboard.phtml
+++ b/modules/scheduler/views/ats2015/scripts/match/dashboard.phtml
@@ -1,137 +1,52 @@
-<style>
-body {
-  background2: url("ats2015/scheduler/match/images/background_dashboard.jpg") no-repeat scroll center center #000000;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  position: relative;
-  width: 100%;
-  color2: white;
-}
-</style>
+<?php $matchesPerBox = 12 ?>
+<?php $secondsPerBox = 8 ?>
 
-<div id="main" style="height: 934px; position: relative;width: 920px;">
-  <?php foreach ($this->matches as $match): ?>
+<?php $this->headScript()->prependJavascriptFile("/ats2015/general/js/jquery.cycle.all.js") ?>
+<?php $this->headLink()->prependStylesheet("/ats2015/scheduler/match/css/dashboard.css") ?>
+
+<?php $this->headScript()->captureJavascriptStart() ?>
+$(document).ready(function() {
+  $('#main_container').cycle({
+    fx: 'fade',
+    timeout: <?php echo $secondsPerBox*1000?>
+  });
+});
+<?php $this->headScript()->captureJavascriptEnd() ?>
+
+<?php $totalBoxCount = 0 ?>
+<div id="main_container" class="center">
+  <?php foreach ($this->tournaments as $tournament): ?>
+  <?php $tournamentMatches = $tournament->matches()->withTeamsAndField()->all() ?>
+  <?php $boxCount = ceil(count($tournamentMatches) / $matchesPerBox); ?>
+  <?php $totalBoxCount += $boxCount ?>
+  <?php foreach (array_chunk($tournamentMatches, $matchesPerBox) as $i => $matches): ?>
   <div class="item">
     <div class="box">
-      <div class="header"><?php echo $this->escape($match->group->tournament->name)?></div>
+      <div class="header"><?php echo $this->escape($tournament->name)?> (<?php echo ($i+1)?>/<?php echo $boxCount ?>)</div>
        <table cellpadding='2' cellspacing='0' width='860'>
          <tr>
            <td class='head' width='90'>Time</td>
            <td class='head' width='70' style='text-align:center;'>Poule</td>
            <td class='head' width='70' style='text-align:center;'>Field</td>
            <td class='head' width='auto'>Match</td>
-           <td class='head' width='150' style='text-align:center;'>Score</td>
+           <td class='head' width='150' style='text-align:center;'>Result</td>
          </tr>
+         <?php $prevMatch = null ?>
+         <?php foreach ($matches as $match): ?>
+         <tr>
+              <td valign='top'><?php if ($prevMatch === null || $prevMatch['starts_at'] != $match['starts_at']): ?><?php echo $this->locale()->getFormatter()->formatTime($match->starts_at, 'short', "Y-m-d H:i:s") ?><?php endif ?></td>
+              <td valign='top' style='text-align:center;'><?php echo $this->escape($match->group->name) ?></td>
+              <td valign='top' style='text-align:center;'><?php echo $this->escape($match->field->name) ?></td>
+              <td valign='top'><?php echo $this->escape($match->home_team->name)?> - <?php echo $this->escape($match->away_team->name)?></td>
+              <td valign='top' style='text-align:center;'><?php echo $match['goals_away'] ?> - <?php echo $match['goals_home'] ?></td>
+          </tr>
+         <?php $prevMatch = $match ?>
+         <?php endforeach ?>
+       </table>
     </div>
   </div>
-  <?php break; ?>
   <?php endforeach ?>
-  <pre>
-  
-    
-    <?php 
-  
-  /*
-
-  <div class='item'>
-            <div class='box'>
-            <div class='header'>Saterday: C-junioren | U15/U14 (1)</div>
-                <table cellpadding='2' cellspacing='0' width='860'>
-                    <tr>
-                        <td class='head' width='90'>Time</td>
-                        <td class='head' width='70' style='text-align:center;'>Poule</td>
-                        <td class='head' width='70' style='text-align:center;'>Field</td>
-                        <td class='head' width='auto'>Match</td>
-                        <td class='head' width='150' style='text-align:center;'>Score</td>
-                    </tr>
-                    <tr>
-                        <td valign='top'>12.50 uur</td>
-                        <td valign='top' style='text-align:center;'>A</td>
-                        <td valign='top' style='text-align:center;'>1</td>
-                        <td valign='top'>Brighton and Hove C1 - asv de Dijk C1</td>
-                        <td valign='top' style='text-align:center;'>score</td>
-                    </tr>
-                    <tr>
-                        <td valign='top'>&nbsp;</td>
-                        <td valign='top' style='text-align:center;'>B</td>
-                        <td valign='top' style='text-align:center;'>2</td>
-                        <td valign='top'>SIOL C1 - Burnham Ramblers C1</td>
-                        <td valign='top' style='text-align:center;'>score</td>
-                    </tr>
-                    <tr>
-                        <td valign='top'>13.10 uur</td>
-                        <td valign='top' style='text-align:center;'>A</td>
-                        <td valign='top' style='text-align:center;'>1</td>
-                        <td valign='top'>Rumelner TV C1 - DESM C1</td>
-                        <td valign='top' style='text-align:center;'>score</td>
-                    </tr>
-                    <tr>
-                        <td valign='top'>&nbsp;</td>
-                        <td valign='top' style='text-align:center;'>B</td>
-                        <td valign='top' style='text-align:center;'>2</td>
-                        <td valign='top'>vv Sliedrecht C2 - Rumelner TV C2</td>
-                        <td valign='top' style='text-align:center;'>score</td>
-                    </tr>
-                    <tr>
-                        <td valign='top'>13.30 uur</td>
-                        <td valign='top' style='text-align:center;'>A</td>
-                        <td valign='top' style='text-align:center;'>1</td>
-                        <td valign='top'>ASC Waterwijk C2 - SDC'12 C2</td>
-                        <td valign='top' style='text-align:center;'>score</td>
-                    </tr>
-                    <tr>
-                        <td valign='top'>&nbsp;</td>
-                        <td valign='top' style='text-align:center;'>B</td>
-                        <td valign='top' style='text-align:center;'>2</td>
-                        <td valign='top'>SCP C1 - TSV Bigge Olsberg C1</td>
-                        <td valign='top' style='text-align:center;'>score</td>
-                    </tr>
-                    <tr>
-                        <td valign='top'>13.50 uur</td>
-                        <td valign='top' style='text-align:center;'>A</td>
-                        <td valign='top' style='text-align:center;'>1</td>
-                        <td valign='top'>Rumelner TV C1 - Brighton and Hove C1</td>
-                        <td valign='top' style='text-align:center;'>score</td>
-                    </tr>
-                    <tr>
-                        <td valign='top'>&nbsp;</td>
-                        <td valign='top' style='text-align:center;'>B</td>
-                        <td valign='top' style='text-align:center;'>2</td>
-                        <td valign='top'>vv Sliedrecht C2 - SIOL C1</td>
-                        <td valign='top' style='text-align:center;'>score</td>
-                    </tr>
-                    <tr>
-                        <td valign='top'>14.10 uur</td>
-                        <td valign='top' style='text-align:center;'>A</td>
-                        <td valign='top' style='text-align:center;'>1</td>
-                        <td valign='top'>DESM C1 - asv de Dijk C1</td>
-                        <td valign='top' style='text-align:center;'>score</td>
-                    </tr>
-                    <tr>
-                        <td valign='top'>&nbsp;</td>
-                        <td valign='top' style='text-align:center;'>B</td>
-                        <td valign='top' style='text-align:center;'>2</td>
-                        <td valign='top'>Rumelner TV C2 - Burnham Ramblers C1</td>
-                        <td valign='top' style='text-align:center;'>score</td>
-                    </tr>
-                    <tr>
-                        <td valign='top'>14.30 uur</td>
-                        <td valign='top' style='text-align:center;'>A</td>
-                        <td valign='top' style='text-align:center;'>1</td>
-                        <td valign='top'>ASC Waterwijk C2 - Brighton and Hove C1</td>
-                        <td valign='top' style='text-align:center;'>score</td>
-                    </tr>
-                    <tr>
-                        <td valign='top'>&nbsp;</td>
-                        <td valign='top' style='text-align:center;'>B</td>
-                        <td valign='top' style='text-align:center;'>2</td>
-                        <td valign='top'>SCP C1 - SIOL C1</td>
-                        <td valign='top' style='text-align:center;'>score</td>
-                    </tr>
-                </table>
-            </div>
-        </div>      
- */?>
-  </pre>
+  <?php endforeach ?>
 </div>
+
+<?php $this->headMeta()->append(array('http-equiv' => 'refresh' , 'content' => ($totalBoxCount * $secondsPerBox) + 1)) ?>
