--- a/modules/scheduler/views/ats2015/scripts/match/update.phtml
+++ b/modules/scheduler/views/ats2015/scripts/match/update.phtml
@@ -1,2 +1,4 @@
-<h2>Wedstrijd aanpassen</h2>
+<?php $this->subtitle('Wedstrijden') ?>
+<?php $this->subtitle('#' . $this->match->id)?>
+<?php $this->subtitle('wijzig') ?>
 <?php echo $this->partial('match/_modify.phtml', array('action' => 'update')) ?>
