--- a/modules/scheduler/views/ats2015/scripts/team/update.phtml
+++ b/modules/scheduler/views/ats2015/scripts/team/update.phtml
@@ -1,1 +1,5 @@
+<?php $this->subtitle('Teams') ?>
+<?php $this->subtitle($this->team->name, $this->url(array('action' => 'read', 'id' => $this->team->id))) ?>
+<?php $this->subtitle('wijzig') ?>
+
 <?php echo $this->partial('team/_modify.phtml', array('action' => 'update')) ?>
