--- a/modules/scheduler/views/ats2015/scripts/match/_table.phtml
+++ b/modules/scheduler/views/ats2015/scripts/match/_table.phtml
@@ -9,16 +9,16 @@ if (!isset($this->highlightTeamId)) { $this->highlightTeamId = -1; }
 <table>
   <tr>
     <th>Tijd</th>
-    <th>Veld</th>
+    <th style="width: 30px">Veld</th>
     <?php if (!$this->hideTournaments): ?>
-    <th>Toernooi</th>
+    <th style="width: 200px">Toernooi</th>
     <?php endif ?>
     <?php if (!$this->hideGroups): ?>
-    <th>Poule</th>
+    <th style="width: 70px">Poule</th>
     <?php endif ?>
-    <th>Thuis</th>
+    <th style="width: 250px">Thuis</th>
     <th></th>
-    <th>Uit</th>
+    <th style="width: 250px">Uit</th>
     <th colspan="3">Uitslag</th>
     <?php if ($this->showEdits): ?>
     <th></th>
@@ -27,25 +27,22 @@ if (!isset($this->highlightTeamId)) { $this->highlightTeamId = -1; }
   <?php $prevMatch = null ?>
   <?php foreach ($this->matches as $i => $match): ?>
   <?php $isNewGroup = ($prevMatch === null || $prevMatch->starts_at != $match->starts_at) ?>
-  <?php if ($isNewGroup && $i>0 && $this->groupByStartsAt): ?>
-  <tr><td style="height: 20px"></td></tr>
-  <?php endif ?>
-  <tr>
+  <tr <?php if ($isNewGroup && $i>0 && $this->groupByStartsAt): ?>class="first-of-group"<?php endif?>>
     <td style="text-align: right">
       <?php if ($isNewGroup || !$this->groupByStartsAt): ?>
       <?php echo $this->locale()->getFormatter()->formatTime($match->starts_at, 'short', "Y-m-d H:i:s") ?>
       <?php endif ?>
     </td>
-    <td style="padding: 0 10px 0 10px"><?php echo $this->escape($match->field->name) ?></td>
+    <td><?php echo $this->escape($match->field->name) ?></td>
     <?php if (!$this->hideTournaments): ?>
-    <td style="padding: 0 10px 0 10px"><a href="<?php echo $this->url(array('controller' => 'tournament', 'action' => 'read', 'id' => $match->group->tournament->id)) ?>"><?php echo $this->escape($match->group->tournament->name) ?></a></td>
+    <td><a href="<?php echo $this->url(array('controller' => 'tournament', 'action' => 'read', 'id' => $match->group->tournament->id)) ?>"><?php echo $this->escape($match->group->tournament->name) ?></a></td>
     <?php endif ?>
     <?php if (!$this->hideGroups): ?>
-    <td style="padding: 0 10px 0 10px;"><a href="<?php echo $this->url(array('controller' => 'group', 'action' => 'read', 'id' => $match->group->id)) ?>"><?php echo $this->escape($match->group->name) ?></a></td>
+    <td><a href="<?php echo $this->url(array('controller' => 'group', 'action' => 'read', 'id' => $match->group->id)) ?>"><?php echo $this->escape($match->group->name) ?></a></td>
     <?php endif ?>
-    <td style="padding: 0 10px 0 10px;<?php if ($this->highlightTeamId == $match->home_team_id):?>font-weight: bold;<?php endif ?>"><a href="<?php echo $this->url(array('controller' => 'team', 'action' => 'read', 'id' => $match->home_team_id)) ?>"><?php echo $this->escape($match->home_team->name) ?></a></td>
+    <td style="<?php if ($this->highlightTeamId == $match->home_team_id):?>font-weight: bold;<?php endif ?>"><a href="<?php echo $this->url(array('controller' => 'team', 'action' => 'read', 'id' => $match->home_team_id)) ?>"><?php echo $this->escape($match->home_team->name) ?></a></td>
     <td>-</td>
-    <td style="padding: 0 10px 0 10px;<?php if ($this->highlightTeamId == $match->away_team_id):?>font-weight: bold;<?php endif ?>"><a href="<?php echo $this->url(array('controller' => 'team', 'action' => 'read', 'id' => $match->away_team_id)) ?>"><?php echo $this->escape($match->away_team->name) ?></a></td>
+    <td style="<?php if ($this->highlightTeamId == $match->away_team_id):?>font-weight: bold;<?php endif ?>"><a href="<?php echo $this->url(array('controller' => 'team', 'action' => 'read', 'id' => $match->away_team_id)) ?>"><?php echo $this->escape($match->away_team->name) ?></a></td>
     <td><?php echo $match->goals_home ?></td>
     <td>-</td>
     <td><?php echo $match->goals_away ?></td>
