added option to hide tournaments on dashboard, fixed print layout of match forms

--- a/modules/general/views/ats2015/scripts/master.phtml
+++ b/modules/general/views/ats2015/scripts/master.phtml
@@ -39,8 +39,10 @@
       <?php echo $this->subtitle() ?>
     </div>
 
-    <div id="content">
-    <?php echo $this->content ?>
+    <div id="content-wrapper">
+      <div id="content">
+      <?php echo $this->content ?>
+      </div>
     </div>
     
     <?php $this->headScript()->prependJavascriptFile("http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js") ?>
