--- a/modules/scheduler/views/ats2015/scripts/match/forms.phtml
+++ b/modules/scheduler/views/ats2015/scripts/match/forms.phtml
@@ -61,7 +61,7 @@
           <div class="goals-away" style="float: left; width: 50px; height: 50px; margin-left: 115px; border: 1px #000000 solid"></div>
         </div>
         
-        <div class="tournament-and-group" style="float: left; margin: 20px 0 0 10px; width: 100%; clear: right;">
+        <div style="float: left; margin: 30px 0 0 10px; clear: both;">
           <b>Scheidsrechter:</b> <?php echo $this->escape($match->referee) ?>
         </div>
         
