--- a/modules/scheduler/views/ats2015/scripts/team/_modify.phtml
+++ b/modules/scheduler/views/ats2015/scripts/team/_modify.phtml
@@ -14,7 +14,7 @@
   
   <dl>
     <dd>
-      <input type="submit" value="<?php echo $this->action?>" />
+      <button type="submit">Opslaan</button>
     </dd>
   </dl>
 </form>
