--- a/modules/scheduler/views/ats2015/scripts/group/read.phtml
+++ b/modules/scheduler/views/ats2015/scripts/group/read.phtml
@@ -2,6 +2,21 @@
 <?php $this->subtitle($this->tournament->name, $this->url(array('controller' => 'tournament', 'action' => 'read', 'id' => $this->tournament->id))) ?>
 <?php $this->subtitle($this->group->name) ?>
 
+<h3>Eigenschappen</h3>
+<div class="section">
+  <table class="properties">
+    <tr>
+      <td class="name">Naam</td>
+      <td class="value"><?php echo $this->escape($this->group->name)?></td>
+    </tr>
+  </table>
+  <br />
+  <form class="admin-button" method="get" action="<?php echo $this->url(array('action' => 'update')) ?>">
+    <input type="hidden" name="id" value="<?php echo $this->group->id?>" />
+    <button type="submit">Wijzig <img src="ats2015/general/images/icons/16x16/edit.png" style="vertical-align: middle" /></button>
+  </form>
+</div>
+
 <h3>Teams</h3>
 <div class="section">
   <table>
