--- a/public/ats2015/general/css/master.scss
+++ b/public/ats2015/general/css/master.scss
@@ -54,7 +54,7 @@ a {
   .section {
     padding-left: 20px;
     margin-bottom: 20px;
-    
+
     table {
       border-collapse: collapse;
 
@@ -90,5 +90,59 @@ a {
         width: 30px;
       }
     }
+    
+    table.properties {
+      td.name {
+        width: 150px;
+        font-weight: bold;
+      }
+      
+      td.value {
+        width: 250px;
+      }
+      
+    }
   }
 }
+
+form {
+  button {
+    font-size: 9pt;
+    height: 28px;
+    img {
+      vertical-align: middle;
+    }
+  }
+  
+  dd {
+    input:not([type=checkbox]) {
+      width: 400px;
+    }
+    
+    textarea {
+      width: 100%;
+      height: 200px;
+    }
+  }
+  
+  ul.errors {
+    margin-left:  0;
+    padding-left: 0;
+    list-style: none;
+
+    li {
+      color: #ff0000;
+      padding-left: 20px;
+      background: {
+        image: url('../images/icons/16x16/error.png');
+        repeat: no-repeat;
+        position: 0 0;
+      }
+    }
+  }
+}
+
+form.admin-button {
+  display: inline;
+}
+
