rearranged the modify match partial, removed current match debug date

--- a/modules/general/views/ats2015/scripts/master.phtml
+++ b/modules/general/views/ats2015/scripts/master.phtml
@@ -20,7 +20,10 @@
       | <a href="<?php echo $this->url(array('module' => 'scheduler', 'controller' => 'match', 'action' => 'forms')) ?>">Wedstrijdbriefjes</a>
       | <a href="<?php echo $this->url(array('module' => 'scheduler', 'controller' => 'match', 'action' => 'current')) ?>">Actuele wedstrijden</a>
       | <div style="display: inline">
-        <form method="get" style="display: inline" action="<?php echo $this->url(array('module' => 'scheduler', 'controller' => 'match', 'action' => 'update')) ?>">#<input type="text" style="width: 60px" name="id" value="" /></form>
+        <form method="get" style="display: inline" action="<?php echo $this->url(array('module' => 'scheduler', 'controller' => 'match', 'action' => 'update')) ?>">
+          <input type="hidden" name="form[returnUrl]" value="<?php echo $this->url(array(), null, false)?>" />
+          #<input type="text" style="width: 60px" name="id" value="" />
+        </form>
       </div>
     <?php endif ?>
       
