--- a/modules/user/views/ats2015/scripts/user/login.phtml
+++ b/modules/user/views/ats2015/scripts/user/login.phtml
@@ -17,7 +17,7 @@
 
     <dl>
       <dd>
-        <input type="submit" name="Login" value="Login" />
+        <button type="submit">Log in</button>
       </dd>
     </dl>
 
